# arenacraft

./: .gitignore  .gitmodules  docker-compose.yml
.devcontainer/: .zshrc  (+3 more)
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/Redis/: RedisConn.cpp  RedisConn.h
src/server/apps/worldserver/: Main.cpp
src/server/game/Arenacraft/: AddArenacraftScripts.hpp  Arenacraft.hpp
src/server/game/Arenacraft/soloq/: soloq_constants.hpp  soloq_info.hpp  soloq_io.hpp  soloq_match_maker.hpp  soloq_matchup.hpp  soloq_npc.hpp  soloq_player.hpp  soloq_queue_list.hpp  soloq_scripts.hpp
src/server/game/Battlegrounds/: ArenaTeam.cpp  Battleground.cpp  BattlegroundMgr.cpp
src/server/game/Entities/Player/: Player.cpp  PlayerGossip.cpp
src/server/game/Entities/Totem/: Totem.cpp  Totem.h
src/server/game/Entities/Unit/: Unit.cpp  Unit.h
src/server/game/Events/: GameEventMgr.cpp
src/server/game/Handlers/: CharacterHandler.cpp  LFGHandler.cpp
src/server/game/Mails/: Mail.cpp
src/server/game/Maps/: MapMgr.cpp
src/server/game/Pools/: PoolMgr.cpp
src/server/game/Scripting/: ScriptMgr.cpp  ScriptMgr.h  ScriptObjectFwd.h
src/server/game/Server/: WorldSession.h
src/server/game/Spells/: Spell.cpp  SpellEffects.cpp  SpellInfo.cpp
src/server/game/World/: World.cpp
src/server/scripts/Commands/: cs_reload.cpp
src/server/scripts/Custom/: custom_script_loader.cpp
src/server/scripts/Spells/: spell_hunter.cpp  spell_rogue.cpp  spell_shaman.cpp
src/server/shared/DataStores/: DBCStructure.h
src/test/: CMakeLists.txt
src/test/src/: TestSoloQMatchMaker.cpp
(+57 files in other folders)
